k8s/content-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: content-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: content-service
  template:
    metadata:
      labels:
        app: content-service
    spec:
      imagePullSecrets:
        - name: ocir-secret
      containers:
        - name: content-service
          image: yny.ocir.io/axspvtyyqq6h/content-service:latest
          ports:
            - containerPort: 8083
---
apiVersion: v1
kind: Service
metadata:
  name: content-service
spec:
  selector:
    app: content-service
  type: NodePort
  ports:
    - port: 8083
      targetPort: 8083
      nodePort: 30083
