k8s/user-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      imagePullSecrets:
        - name: ocir-secret
      containers:
        - name: user-service
          image: yny.ocir.io/axspvtyyqq6h/user-service:latest
          ports:
            - containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
spec:
  selector:
    app: user-service
  type: NodePort
  ports:
    - port: 8082
      targetPort: 8082
      nodePort: 30082
