k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: admin-ingress
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api/auth
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 8081
          - path: /users
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 8082
          - path: /notices
            pathType: Prefix
            backend:
              service:
                name: content-service
                port:
                  number: 8083
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
